[project]
name = "watchfs"
version = "0.1.3"
description = "Watch and sync files to another directory"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Nyakku Shigure", email = "sigure.qaq@gmail.com" }]
keywords = ["watch", "sync"]
license = { text = "MIT" }
classifiers = [
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "aiofiles>=24.1.0",
  "colored>=2.2.4",
  "typing-extensions>=4.12.2",
  "watchfiles>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/ShigureLab/watchfs"
Documentation = "https://github.com/ShigureLab/watchfs"
Repository = "https://github.com/ShigureLab/watchfs"
Issues = "https://github.com/ShigureLab/watchfs/issues"

[project.scripts]
watchfs = "watchfs.__main__:main"

[dependency-groups]
dev = [
  "pyright>=1.1.386",
  "ruff>=0.7.1",
  "pytest>=8.3.3",
  "pytest-rerunfailures>=14.0",
  "tomli>=2.0.2",
]

[tool.pyright]
include = ["src/watchfs", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
  # Pyflakes
  "F",
  # Pycodestyle
  "E",
  "W",
  # Isort
  "I",
  # Comprehensions
  "C4",
  # Debugger
  "T100",
  # Pyupgrade
  "UP",
  # Flake8-pyi
  "PYI",
  # Bugbear
  "B",
  # Pylint
  "PLE",
  # Flake8-simplify
  "SIM101",
  # Flake8-use-pathlib
  "PTH",
  # Pygrep-hooks
  "PGH004",
  # Flake8-type-checking
  "TCH",
  # Flake8-raise
  "RSE",
  # Refurb
  "FURB",
  # Flake8-future-annotations
  "FA",
  # Yesqa
  "RUF100",
]
ignore = [
  "E501", # line too long, duplicate with ruff fmt
  "F401", # imported but unused, duplicate with pyright
  "F841", # local variable is assigned to but never used, duplicate with pyright
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
known-first-party = ["watchfs"]
combine-as-imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
